@@ -5,5 +5,5 @@ define('DB_USER','scruwp');
 define('DB_PASS','a1b2c3d4');
 define('DB_DATABASE','scruwp');
 // PROJECT NAME
-define('PROG_NAME', 'Quebec');
+define('PROG_NAME', 'Project Name');
 ?>
