@@ -32,7 +32,7 @@ $users = select(
 ?>
 <form method="post" onsubmit="return Save.task();">
 	<input type="hidden" name="action" value="edtTask" />
-	<input type="hidden" name="id" value="<? echo $_REQUEST['id']; ?>" />
+	<input type="hidden" name="id" value="<? echo $id; ?>" />
 	<div class="response"></div>
 
 	<label for="idUser">Owner:</label>
